// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pi 风格消息视觉快照 > 40 列中文、组合字符、Markdown、工具状态稳定 1`] = `
"                                        
 请检查 权限设置，保留草稿。            
 中文 / café / é / 🧑‍💻                   
                                        
 ◇ 思考 · 已结束
                                        
 检查结果                               
                                        
 - 权限保留显式确认                     
 - draft 不会自动保存                   
                                        
 \`\`\`ts                                  
   const mode = "ask";                  
 \`\`\`                                    
                                        
 ◌ bash · 执行中  0.0s                  
   pnpm test                            
 ✓ read_file  0.0s  #1                  
   src/中文.ts                          
 第一行                                 
 第二行                                 
 第三行                                 
 … 5 行输出 · Ctrl+O /details 1         
 × bash · 失败  0.0s                    
   test                                 
 失败原因                               
 修复后可重新运行                       "
`;

exports[`pi 风格消息视觉快照 > 80 列中文、组合字符、Markdown、工具状态稳定 1`] = `
"                                                                                
 请检查 权限设置，保留草稿。                                                    
 中文 / café / é / 🧑‍💻                                                           
                                                                                
 ◇ 思考 · 已结束
                                                                                
 检查结果                                                                       
                                                                                
 - 权限保留显式确认                                                             
 - draft 不会自动保存                                                           
                                                                                
 \`\`\`ts                                                                          
   const mode = "ask";                                                          
 \`\`\`                                                                            
                                                                                
 ◌ bash · 执行中  0.0s                                                          
   pnpm test                                                                    
 ✓ read_file  0.0s  #1                                                          
   src/中文.ts                                                                  
 第一行                                                                         
 第二行                                                                         
 第三行                                                                         
 … 5 行输出 · Ctrl+O /details 1                                                 
 × bash · 失败  0.0s                                                            
   test                                                                         
 失败原因                                                                       
 修复后可重新运行                                                               "
`;

exports[`pi 风格消息视觉快照 > 100 列中文、组合字符、Markdown、工具状态稳定 1`] = `
"                                                                                                    
 请检查 权限设置，保留草稿。                                                                        
 中文 / café / é / 🧑‍💻                                                                               
                                                                                                    
 ◇ 思考 · 已结束
                                                                                                    
 检查结果                                                                                           
                                                                                                    
 - 权限保留显式确认                                                                                 
 - draft 不会自动保存                                                                               
                                                                                                    
 \`\`\`ts                                                                                              
   const mode = "ask";                                                                              
 \`\`\`                                                                                                
                                                                                                    
 ◌ bash · 执行中  0.0s                                                                              
   pnpm test                                                                                        
 ✓ read_file  0.0s  #1                                                                              
   src/中文.ts                                                                                      
 第一行                                                                                             
 第二行                                                                                             
 第三行                                                                                             
 … 5 行输出 · Ctrl+O /details 1                                                                     
 × bash · 失败  0.0s                                                                                
   test                                                                                             
 失败原因                                                                                           
 修复后可重新运行                                                                                   "
`;
